--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pnpm": "^9.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.25.1",
     "react-scroll": "^1.9.0",
     "rome": "^12.1.3",
     "tailwind": "^4.0.0",
